--- a/ui/storefront/Areas/Basket/Views/Basket/Index.cshtml
+++ b/ui/storefront/Areas/Basket/Views/Basket/Index.cshtml
@@ -74,6 +74,23 @@ else
                     $('#card-info-section').hide();
                 }
             });
+
+            $('#remove-item-btn').on('click', function (e) {
+                    Swal.fire({
+                        title: 'Are you sure?',
+                        text: "You won't be able to revert this!",
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'Yes, delete it!'
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = '/Basket/Basket/DeleteItem/' + $(this).data('id');
+                            toastr.success('Item removed from cart');
+                        }
+                    });
+                });
         });
     </script>
 }
