--- a/ui/storefront/Areas/Product/Views/Product/Detail.cshtml
+++ b/ui/storefront/Areas/Product/Views/Product/Detail.cshtml
@@ -80,4 +80,25 @@
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial"/>
+    <script>
+        $(document).ready(function () {
+            $('#add-to-cart-btn').click(function () {
+                $(this).prop('disabled', true);
+                $.ajax({
+                    type: 'POST',
+                    url: $('#addToBasketForm').attr('action'),
+                    data: $('#addToBasketForm').serialize(),
+                    success: function (result) {
+                        toastr.success("Added to cart successfully.");
+                    },
+                    error: function () {
+                        toastr.error("An error occurred while adding to cart.");
+                    },
+                    complete: function () {
+                        $('#add-to-cart-btn').prop('disabled', false);
+                    }
+                });
+            });
+        });
+    </script>
 }
