--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -6,13 +6,28 @@
     <meta name="description" content="A project developed by a rookie transitioning to an engineer at NashTech."/>
     <meta name="author" content="FoxMinChan"/>
     <meta name="keywords" content="Rookie, NashTech, FoxMinChan, E-commerce, ASP.NET Core, Tailwind CSS, Razor Pages"/>
+    <meta name="application-name" content="Rookie Shop"/>
     <meta name="robots" content="index, follow"/>
     <meta name="googlebot" content="index, follow"/>
     <meta name="bingbot" content="index, follow"/>
     <meta name="theme-color" content="#ffffff"/>
     <meta name="msapplication-TileColor" content="#ffffff"/>
+    <meta name="og:title" content="Rookie Shop"/>
+    <meta name="og:description" content="A project developed by a rookie transitioning to an engineer at NashTech."/>
+    <meta name="og:image" content="https://repository-images.githubusercontent.com/795604204/527ffed3-73ee-4d94-a51d-6564508397f8" />
+    <meta name="og:type" content="website"/>
+    <meta name="og:locale" content="en_US"/>
     <title>@ViewData["Title"]</title>
     <cache expires-after="@TimeSpan.FromSeconds(300)">
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png" asp-append-version="true"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" asp-append-version="true"/>
         <environment names="Development,Docker">
             <link rel="stylesheet" href="~/css/output.css" asp-append-version="true"/>
             <link rel="stylesheet" href="~/lib/dist/toastr.js/toastr.min.css" asp-append-version="true"/>
