--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="A project developed by a rookie transitioning to an engineer at NashTech."/>
-    <meta name="author" content="FoxMinChan"/>
+    <meta name="author" content="Nhan Nguyen"/>
     <meta name="keywords" content="Rookie, NashTech, FoxMinChan, E-commerce, ASP.NET Core, Tailwind CSS, Razor Pages"/>
     <meta name="application-name" content="Rookie Shop"/>
     <meta name="robots" content="index, follow"/>
@@ -14,10 +14,11 @@
     <meta name="msapplication-TileColor" content="#ffffff"/>
     <meta name="og:title" content="Rookie Shop"/>
     <meta name="og:description" content="A project developed by a rookie transitioning to an engineer at NashTech."/>
-    <meta name="og:image" content="https://repository-images.githubusercontent.com/795604204/527ffed3-73ee-4d94-a51d-6564508397f8" />
+    <meta name="og:image" content="https://repository-images.githubusercontent.com/795604204/527ffed3-73ee-4d94-a51d-6564508397f8"/>
     <meta name="og:type" content="website"/>
     <meta name="og:locale" content="en_US"/>
     <title>@ViewData["Title"]</title>
+    <link rel="author" href="https://github.com/foxminchan"/>
     <cache expires-after="@TimeSpan.FromSeconds(300)">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" asp-append-version="true"/>
         <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" asp-append-version="true"/>
