fix: cdn version deprecated

--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                   integrity="sha512-OWGg8FcHstyYFwtjfkiCoYHW2hG3PDWwdtczPAPUcETobBJOVCouKig8rqED0NMLcT9GtE4jw6IT1CSrwY87uw=="
                   crossorigin="anonymous"
                   referrerpolicy="no-referrer"/>
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css"
                   asp-fallback-href="~/lib/dist/toastr.js/toastr.min.css"
                   asp-append-version="true"
                   rel="stylesheet"
@@ -152,7 +152,7 @@
         <script src="~/lib/dist/toastr.js/toastr.min.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
-        <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+        <script src="https://code.jquery.com/jquery-4.0.0-beta.slim.min.js"
                 asp-fallback-src="~/lib/dist/jquery/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 asp-append-version="true"
