--- a/ui/storefront/Views/Shared/_CookieConsentPartial.cshtml
+++ b/ui/storefront/Views/Shared/_CookieConsentPartial.cshtml
@@ -10,7 +10,7 @@
     <div id="cookieConsent" class="flex justify-between items-center gap-2 bg-gray-100 px-4 py-2 fixed bottom-0 left-0 w-full z-50">
         <p class="text-sm text-gray-700">
             We use cookies to ensure you get the best experience on our website. Learn more
-            <a asp-controller="Home" asp-action="Privacy" class="text-blue-700">here</a>.
+            <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-blue-700">here</a>.
         </p>
         <button type="button" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded" data-bs-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
             Accept
