--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <meta name="og:image" content="https://repository-images.githubusercontent.com/795604204/527ffed3-73ee-4d94-a51d-6564508397f8"/>
     <meta name="og:type" content="website"/>
     <meta name="og:locale" content="en_US"/>
+    @await RenderSectionAsync("MetaTags", required: false)
     <title>@ViewData["Title"]</title>
     <link rel="author" href="https://github.com/foxminchan"/>
     <cache expires-after="@TimeSpan.FromSeconds(300)">
@@ -150,6 +151,7 @@
         <script src="~/lib/dist/jquery/jquery.min.js" asp-append-version="true"></script>
         <script src="~/lib/dist/sweetalert2/sweetalert2.min.js" asp-append-version="true"></script>
         <script src="~/lib/dist/toastr.js/toastr.min.js" asp-append-version="true"></script>
+        <script src="~/lib/dist/htmx/htmx.min.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://code.jquery.com/jquery-4.0.0-beta.slim.min.js"
@@ -174,6 +176,13 @@
                 integrity="sha512-lbwH47l/tPXJYG9AcFNoJaTMhGvYWhVM9YI43CT+uteTRRaiLCui8snIgyAN8XWgNjNhCqlAUdzZptso6OCoFQ=="
                 crossorigin="anonymous"
                 referrerpolicy="no-referrer">
+        </script>
+        <script src="https://unpkg.com/htmx.org@1.9.12"
+                asp-fallback-src="~/lib/dist/htmx/htmx.min.js"
+                asp-fallback-test="window.htmx"
+                asp-append-version="true"
+                integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
+                crossorigin="anonymous">
         </script>
     </environment>
 </cache>
