--- a/ui/storefront/Areas/Product/Views/Shared/Components/AddToCart/Default.cshtml
+++ b/ui/storefront/Areas/Product/Views/Shared/Components/AddToCart/Default.cshtml
@@ -1,16 +1,14 @@
-﻿@model RookieShop.Storefront.Areas.Basket.Models.BasketRequest
+﻿@using System.Net.Mime
+@model RookieShop.Storefront.Areas.Basket.Models.BasketRequest
 
 <div class="mt-6 sm:gap-4 sm:items-center sm:flex sm:mt-8">
-    <form asp-area="Basket" asp-controller="Basket" asp-action="AddToBasket" asp-antiforgery="true" id="addToBasketForm">
-        <input type="hidden" asp-for="AccountId" value="@Model.AccountId"/>
-        <input type="hidden" asp-for="ProductId" value="@Model.ProductId"/>
-        <input type="hidden" asp-for="Quantity" value="@Model.Quantity"/>
-        <input type="hidden" asp-for="Price" value="@Model.Price"/>
-        <button type="submit"
-                id="add-to-cart-btn"
-                class="text-white mt-4 sm:mt-0 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center justify-center">
-            <img asp-append-version="true" loading="lazy" class="w-5 h-5 -ms-2 me-2" src="~/imgs/product/cart.svg" alt="cart"/>
-            Add to cart
-        </button>
-    </form>
+    <button class="text-white mt-4 sm:mt-0 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center justify-center"
+            hx-boost="true"
+            hx-post="@Url.Action("AddToBasket", "Basket", new { area = "Basket" })"
+            hx-headers='{"Content-Type": "@MediaTypeNames.Application.Json"}'
+            hx-trigger="click"
+            hx-vals='{"AccountId": "@Model.AccountId", "ProductId": "@Model.ProductId", "Quantity": "@Model.Quantity", "Price": "@Model.Price"}'
+            hx-swap="none">
+        Add to cart
+    </button>
 </div>
