--- a/ui/storefront/Views/Shared/Partials/_DefaultMetaTagsPartital.cshtml
+++ b/ui/storefront/Views/Shared/Partials/_DefaultMetaTagsPartital.cshtml
@@ -1,4 +1,9 @@
-﻿<meta name="description" content="A project developed by a rookie transitioning to an engineer at NashTech."/>
+﻿<meta name="htmx-config" 
+      historyCacheSize="20"
+      indicatorClass="htmx-indicator"
+      includeAspNetAntiforgeryToken="true"
+/>
+<meta name="description" content="A project developed by a rookie transitioning to an engineer at NashTech."/>
 <meta name="author" content="Nhan Nguyen"/>
 <meta name="keywords" content="Rookie, NashTech, FoxMinChan, E-commerce, ASP.NET Core, Tailwind CSS, Razor Pages"/>
 <meta name="application-name" content="Rookie Shop"/>
