--- a/ui/storefront/Areas/Product/Views/Shared/Components/AddToCart/Default.cshtml
+++ b/ui/storefront/Areas/Product/Views/Shared/Components/AddToCart/Default.cshtml
@@ -4,8 +4,11 @@
 <div class="mt-6 sm:gap-4 sm:items-center sm:flex sm:mt-8">
     <button class="text-white mt-4 sm:mt-0 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center justify-center"
             hx-boost="true"
-            hx-post="@Url.Action("AddToBasket", "Basket", new { area = "Basket" })"
-            hx-headers='{"Content-Type": "@MediaTypeNames.Application.Json"}'
+            hx-post
+            hx-area="Basket"
+            hx-controller="Basket"
+            hx-action="AddToBasket"
+            hx-headers-Content-Type="@MediaTypeNames.Application.Json"
             hx-trigger="click"
             hx-vals='{"AccountId": "@Model.AccountId", "ProductId": "@Model.ProductId", "Quantity": "@Model.Quantity", "Price": "@Model.Price"}'
             hx-swap="none">
