--- a/ui/storefront/Views/_ViewImports.cshtml
+++ b/ui/storefront/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using RookieShop.Storefront
 @using RookieShop.Storefront.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Htmx.TagHelpers
